[package]
name = "s3-md5"
version = "0.1.0"
authors = ["Paul Sud <paulsud@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
hex = "0.4.3"
md-5 = "0.9.1"
rusoto_core = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.46.0", default_features = false, features=["rustls"] }
structopt = "0.3.21"
tokio = { version = "1", features = ["macros", "io-util"] }
url = "2.2.2"
